Bug 158684 - CALC CHART XY Scatter Chart: line type "stepped" ignores parameters (de: "Streudiagramm / Stufen")
Summary: CALC CHART XY Scatter Chart: line type "stepped" ignores parameters (de: "Str...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.2.1 release
Hardware: All All
: medium major
Assignee: Julien Nabet
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 t...
Keywords: regression
: 158871 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-13 12:42 UTC by TeeLittle
Modified: 2024-01-05 15:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
document with bug isolated for reproducing the issue described (59.37 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-12-13 12:42 UTC, TeeLittle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description TeeLittle 2023-12-13 12:42:30 UTC
Created attachment 191408 [details]
document with bug isolated for reproducing the issue described

Scatter Charts with stepped lines offer settings regarding the position of the steps. 
Steps can start with the horizontal or vertical line, or the step can be positioned inbetween neighbouring values. 

I experienced that these "step settings" are ignored, and Calc sticks to the standard setting. 

Please check attached document to see the issue and reproduce it.
Comment 1 Julien Nabet 2023-12-13 20:25:31 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Regression from 65752e649872edfd98915035b61aca510ae8f271
jsdialog: enable and make async chart line prop dialog
Comment 2 Julien Nabet 2023-12-13 20:26:17 UTC
https://gerrit.libreoffice.org/c/core/+/160715
Comment 3 Commit Notification 2023-12-14 07:49:46 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4eb875d95622fb4346d3f8b24327a1b84230eca1

tdf#158684: CHART XY Scatter Chart: line type "stepped" ignores parameters

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2023-12-14 07:50:40 UTC
Patch for 24.2:
https://gerrit.libreoffice.org/c/core/+/160699

Patch for 7.6 waiting for review here:
https://gerrit.libreoffice.org/c/core/+/160700
Comment 5 Commit Notification 2023-12-14 12:27:35 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/08ab40c5489875070c3b66e331da87f8e6ebe4a2

tdf#158684: CHART XY Scatter Chart: line type "stepped" ignores parameters

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2023-12-26 20:39:26 UTC
*** Bug 158871 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2024-01-05 15:02:24 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b26ea56c61773808b6641ffa14aa8092e57d271c

tdf#158684: CHART XY Scatter Chart: line type "stepped" ignores parameters

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.