tdf#158684: CHART XY Scatter Chart: line type "stepped" ignores parameters

Regression from 65752e649872edfd98915035b61aca510ae8f271
Date:   Fri Mar 24 10:52:13 2023 +0100
jsdialog: enable and make async chart line prop dialog

Change-Id: I1532c45ae72d2c45ace72bcc099fcc8baa265b99
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160715
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 4eb875d95622fb4346d3f8b24327a1b84230eca1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161675
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>